# docx-processor

./: .gitignore  =1.1.0  CONTRIBUTION.md  DEVELOPERS.md  JOURNAL.md  LICENSE  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  setup.py  test_phase2.py
docs/: PLATFORM_REFERENCE.md  development_log.md  installation.md  project_instructions.yaml
docs/requirements/: product_requirements_document.md  project_plan_and_phasing.md  technical_specifications.md
docx_processor.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
examples/: basic_usage.py  chunking_example.py  metadata_example.py
scripts/: setup.ps1  setup.sh
src/: __main__.py
src/docx_processor/: __init__.py  chunking.py  cli.py  fallback_processor.py  html_generator.py  image_handler.py  metadata_extractor.py  processor.py  style_extractor.py  utils.py  version.py
tests/: test_processor.py
tests/test_data/: README.md
