[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docx-processor"
version = "0.1.0"
description = "Python application to convert Word documents into analyzable formats"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mammoth>=1.5.0",
    "beautifulsoup4>=4.11.0",
    "Pillow>=9.0.0",
    "lxml>=4.9.0",
]

[project.scripts]
docx-processor = "main:main"

[tool.setuptools]
packages = ["src"]
